--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,6 +1,6 @@
 .app {
-    margin: 20px;
-    padding: 10px;
+    /* margin: 20px;
+    padding: 10px; */
     display: flex;
     
     justify-content: center;
