--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -7,12 +7,8 @@
 }
 
 .app {
-    /* margin: 20px;
-    padding: 10px; */
     display: flex;
-    
     justify-content: center;
-    /* align-items: center; */
 }
 
 .nav_container {
@@ -21,7 +17,7 @@
     height: 100%;
 
     margin-top: 20px;
-    padding: 10px;
+    padding: 20px;
 
     z-index: 1;
 
@@ -32,41 +28,136 @@
     font-family: 'Expletus Sans';
     font-size: 30px;
     font-weight: bold;
+    text-align: center;
 
-    color: #7c65d4;
+    background-image: linear-gradient(
+    to right,
+    #7c65d4,
+    #54b3d6 50%,
+    #7c65d4 50%
+  );
+  background-size: 200% 100%;
+  background-position: 100%;
+  display: block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+.my_name::before {
+    content: '';
+    background: #c7b9ec;
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    left: 50%;
+    transform: translateX(-50%) scaleX(0); 
+    transform-origin: center; 
+    width: 100%;
+    height: 3px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.my_name:hover {
+    background-position: 0;
+    letter-spacing: 3px;
+}
+
+.my_name:hover::before {
+    transform: translateX(-50%) scaleX(1);
 }
 
 .heading {
-    width: 120px;
-
+    position: relative;
+    width: 100%;
+    max-width: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-bottom: 10px;
 
     font-family: 'Expletus Sans';
-    font-size: 18px;    
+    font-size: 20px;    
+    letter-spacing: 0;
+    text-align: center;
 
     color: grey;
     opacity: 0.6;
+
+    transition: opacity 0.3s, letter-spacing 0.3s;
 }
 
-.heading:hover {
+.heading:hover, .heading:active {
     opacity: 1.0;
+    letter-spacing: 5px;
+}
+
+.heading::before, .heading::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    width: 0;
+    border: 1px solid rgba(156, 124, 203, 0);
+    transition: all 0.3s ease-in-out;
+}
+
+.heading::before {
+    top: 0;
+}
+
+.heading::after {
+    bottom: 0;
+}
+
+.heading:hover::before, .heading:hover::after {
+    width: 70%;
+    left: 15%; /* center lines to text */
+    border-color: #c7b9ec;
+}
+
+.subheading_container {
+    display: block;
+    text-align: center;
 }
 
 .subheading {
-    width: 140px;
-
-    margin-bottom: 12px;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 5px;
+    padding-bottom: 3px;
 
     font-family: 'Rubik';  
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
+    text-align: center;
 
     color: grey;
     opacity: 0.6;
+    transition: opacity 0.3s, letter-spacing 0.3s;
 }
 
-.subheading:hover {
+.subheading:hover, .subheading:active {
     opacity: 1.0;
+    letter-spacing: 3px;
+}
+
+.subheading::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: #c7b9ec;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) scaleX(0); /* Center the underline and start from the center */
+    transform-origin: center;
+    transition: transform .3s ease-in-out;
+}
+
+.subheading:hover::before {
+    transform: translateX(-50%) scaleX(1);
 }
 
 a:link { text-decoration: none; }
